@@ -1,4 +1,5 @@
 FlightCrew v0.7.1 ADD_DATE
+    - added an automatic update checker to the GUI app
     - the GUI now displays a "No problems found" message when the epub passes all checks 
     (issue #9)
     - fixed an issue with missing XHTML files causing the GUI to show a dialog about an 
